# arc-reader-rs

./: .gitignore  AGENTS.md  Cargo.toml  README-en.md  README.md  dev-docs.md
.github/workflows/: release.yml  test.yaml
examples/: gen-fixtures.rs
src/: arc.rs  bgi.rs  bse.rs  cbg.rs  decrypt.rs  dsc.rs  error.rs  lib.rs  main.rs  ogg.rs  write.rs
test_assets/fixtures/: arc_audio.arc  arc_bgi.arc  arc_cbg.arc
