[package]
description = "A tool to pack and unpack Arc files for BGI engine"
edition     = "2024"
name        = "arc-reader-rs"
version     = "0.2.2"

[dependencies]
clap              = { version = "4.6", features = ["derive"] }
lewton            = "0.10.2"
log               = "0.4"
png               = "0.18"
pretty_env_logger = "0.5"
rayon             = "1.10"
thiserror         = "2.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "arc-reader"
path = "src/main.rs"

[profile.release]
lto       = true
opt-level = "z"
panic     = "abort"
strip     = true
