[package]
description = "A tool to pack and unpack Arc files for BGI engine"
edition     = "2024"
name        = "arc-reader-rs"
version     = "0.3.0"

[dependencies]
bytes             = "1.5"
clap              = { version = "4.6", features = ["derive"] }
lewton            = "0.10.2"
log               = "0.4"
memchr            = "2.8"
png               = "0.18"
pretty_env_logger = "0.5"
rayon             = "1.12"
smallvec          = "1.11"
thiserror         = "2.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "arc-reader"
path = "src/main.rs"

[profile.release]
lto       = true
opt-level = "z"
panic     = "abort"
strip     = true
