[package]
authors     = ["Absolutex"]
categories  = ["game-development", "multimedia"]
description = "A tool to pack and unpack Arc files for BGI engine"
edition     = "2024"
exclude     = ["/.github", "/AGENTS.md", "/.opencode", "/.vscode"]
keywords    = ["bgi", "arc", "visual-novel", "game-engine"]
license     = "MIT"
name        = "arc-reader"
readme      = "README.md"
repository  = "https://github.com/lxl66566/arc-reader-rs"
version     = "0.4.0"

[features]
bin     = ["dep:clap", "dep:pretty_env_logger"]
default = []

[dependencies]
bytes     = "1.12"
lewton    = "0.10.2"
log       = "0.4"
memchr    = "2.8"
png       = "0.18"
rayon     = "1.12"
smallvec  = "1.15"
thiserror = "2.0"

clap              = { version = "4.6", features = ["derive"], optional = true }
pretty_env_logger = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = "3"

[lib]
name = "arc_reader"

[[bin]]
name              = "arc-reader"
path              = "src/main.rs"
required-features = ["bin"]

[profile.release]
lto       = true
opt-level = "s"
panic     = "abort"
strip     = true
